Refactor backend mappers and configs for consistency
Refactored all backend MapStruct-generated mapper implementations to use consistent indentation and code style. Also updated configuration files for improved readability and maintainability. No functional changes were made; this is a code style and formatting update.